src/objects/cadmus_core__Pack__c.object
<CustomObject>
    <fields>
        <fullName>cadmus_core__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Customer_Pack_Id__c</fullName>
        <formula>IF(cadmus_core__Migrated_Customer_Pack_Id__c == &apos;&apos;, $Organization.Id + &apos;_&apos; + Id, cadmus_core__Migrated_Customer_Pack_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Pack Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Leading_Doc_Config__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Leading Doc Config</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>cadmus_core__Doc_Config__c.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>TEMPLATE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>cadmus_core__Doc_Config__c</referenceTo>
        <relationshipLabel>PDF Butler Packs</relationshipLabel>
        <relationshipName>PDF_Butler_Packs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cadmus_core__Migrated_Customer_Pack_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migrated Customer Pack Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>PDF Butler Pack</label>
    <listViews>
        <fullName>cadmus_core__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDF Butler Packs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>